--- a/scss/palace css/palace.css
+++ b/scss/palace css/palace.css
@@ -145,6 +145,171 @@ section {
   margin-right: 1em;
 }
 
+.slider-container {
+  position: absolute;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+.slider-container .left-slide {
+  height: 100%;
+  width: 35%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 0.5s ease-in-out;
+}
+.slider-container .left-slide .item1,
+.slider-container .left-slide .item2,
+.slider-container .left-slide .item3,
+.slider-container .left-slide .item4 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+.slider-container .left-slide .item1 {
+  background-color: #FD3555;
+}
+.slider-container .left-slide .item2 {
+  background-color: #2A86BA;
+}
+.slider-container .left-slide .item3 {
+  background-color: #252E33;
+}
+.slider-container .left-slide .item4 {
+  background-color: #FFB866;
+}
+.slider-container .left-slide h1 {
+  font-size: 40px;
+  margin-bottom: 10px;
+  margin-top: -30px;
+}
+.slider-container .right-slide {
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 35%;
+  width: 65%;
+  transition: transform 0.5s ease-in-out;
+  background-color: #FD3555;
+}
+.slider-container .right-slide .item1,
+.slider-container .right-slide .item2,
+.slider-container .right-slide .item3,
+.slider-container .right-slide .item4 {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
+  width: 100%;
+}
+.slider-container .right-slide .item1 {
+  background-image: url("../../video/palace/ds-junggwan.jpg");
+}
+.slider-container .right-slide .item2 {
+  background-image: url("../../video/palace/ds-kyungwoonham.jpg");
+}
+.slider-container .right-slide .item3 {
+  background-image: url("../../video/palace/ds-seokjo.jpg");
+}
+.slider-container .right-slide .item4 {
+  background-image: url("../../video/palace/ds-seokuh.jpg");
+}
+.slider-container button {
+  background-color: #fff;
+  border: none;
+  color: #aaa;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 15px;
+}
+.slider-container button:hover {
+  color: #222;
+}
+.slider-container button:focus {
+  outline: none;
+}
+.slider-container .action-buttons {
+  position: absolute;
+  left: 35%;
+  top: 50%;
+  z-index: 100;
+}
+.slider-container .action-buttons .down-button {
+  transform: translateX(-100%);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.slider-container .action-buttons .up-button {
+  transform: translateY(-100%);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.container {
+  position: relative;
+}
+.container .mySlides {
+  display: none;
+}
+.container .mySlides .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.container .prev,
+.container .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+}
+.container .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.container .prev:hover,
+.container .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.container .caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+.container .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.container .column {
+  float: left;
+  width: 16.66%;
+}
+.container .demo-cursor {
+  opacity: 0.6;
+}
+.container .active,
+.container .demo:hover {
+  opacity: 1;
+}
+
 #commonUpButton {
   position: fixed;
   right: 3vw;
