--- a/scss/event css/event.css
+++ b/scss/event css/event.css
@@ -59,9 +59,10 @@ header a:hover {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  border: 1px solid white;
+  border: 2px solid white;
   background-color: rgb(8, 53, 53);
   color: white;
+  z-index: 999;
   cursor: pointer;
 }
 #commonUpButton:hover {
@@ -93,7 +94,7 @@ header a:hover {
   top: 100%;
 }
 .section-1 .container {
-  margin: 20px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,10 +107,11 @@ header a:hover {
 .section-1 .container .line-2 .element {
   display: flex;
   align-items: center;
-  width: 20vw;
-  height: 30vh;
-  margin: 20px 20px;
+  width: 19vw;
+  height: 28vh;
+  margin: 25px 25px;
   overflow: hidden;
+  transform: rotate(-3deg);
 }
 .section-1 .container .line-1 .element .content .title,
 .section-1 .container .line-2 .element .content .title {
@@ -122,6 +124,10 @@ header a:hover {
   margin-top: 40px;
   line-height: 2;
 }
+.section-1 .container .line-1 .element .content .text a:hover,
+.section-1 .container .line-2 .element .content .text a:hover {
+  text-decoration: underline;
+}
 .section-1 .container .line-1 .element img,
 .section-1 .container .line-2 .element img {
   width: 100%;
@@ -130,29 +136,43 @@ header a:hover {
      object-fit: cover;
   cursor: pointer;
   border: 4px solid lightgray;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
 }
 .section-1 .container .line-1 > .element:first-child {
   display: flex;
   justify-content: center;
   align-items: end;
+  width: 20vw;
+  height: 30vh;
+  transform: rotate(0);
 }
 .section-1 .container .detailPopup {
+  display: flex;
+  justify-content: center;
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 40vw;
-  height: 60vh;
+  height: 70vh;
   transform: translate(-50%, -50%);
   visibility: hidden;
   opacity: 0;
   transition: 1s;
-  z-index: 1;
 }
 .section-1 .container .detailPopup img {
+  position: relative;
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
+  border: 2px solid gray;
+}
+.section-1 .container .detailPopup .fa-regular {
+  position: absolute;
+  font-weight: lighter;
+  bottom: 20px;
+  right: 20px;
+  cursor: pointer;
+  font-size: 2em;
 }
 .section-1 .bottom-text {
   position: relative;
