--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -52,9 +52,10 @@ header {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  border: 1px solid white;
+  border: 2px solid white;
   background-color: rgb(8, 53, 53);
   color: white;
+  z-index: 999;
   cursor: pointer;
   &:hover {
     & {
@@ -91,7 +92,7 @@ header {
   top: 100%;
 
   .container {
-    margin: 20px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,10 +107,11 @@ header {
         display: flex;
         align-items: center;
         // background-color: salmon;
-        width: 20vw;
-        height: 30vh;
-        margin: 20px 20px;
+        width: 19vw;
+        height: 28vh;
+        margin: 25px 25px;
         overflow: hidden;
+        transform: rotate(-3deg);
 
         .content {
           .title {
@@ -120,6 +122,9 @@ header {
             font-size: 1.2em;
             margin-top: 40px;
             line-height: 2;
+            a:hover {
+              text-decoration: underline;
+            }
           }
         }
 
@@ -131,6 +136,7 @@ header {
           // background-color: white;
           border: 4px solid lightgray;
           // border-style: groove;
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
         }
       }
     }
@@ -138,26 +144,41 @@ header {
       display: flex;
       justify-content: center;
       align-items: end;
+      width: 20vw;
+      height: 30vh;
+      transform: rotate(0);
       // background-color: skyblue;
     }
 
     .detailPopup {
+      display: flex;
+      justify-content: center;
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 40vw;
-      height: 60vh;
+      // width: 40vw;
+      height: 70vh;
       transform: translate(-50%, -50%);
       // background-color: salmon;
       visibility: hidden;
       opacity: 0;
       transition: 1s;
-      z-index: 1;
 
       img {
+        position: relative;
         width: 100%;
         height: 100%;
         object-fit: contain;
+        border: 2px solid gray;
+      }
+      // 닫기 버튼
+      .fa-regular {
+        position: absolute;
+        font-weight: lighter;
+        bottom: 20px;
+        right: 20px;
+        cursor: pointer;
+        font-size: 2em;
       }
     }
   }
@@ -187,6 +208,7 @@ header {
   transition: 0.8s;
   background-color: green;
   top: 200%;
+  // top: 0;
 }
 
 .section-3 {
