--- a/scss/view css/view.css
+++ b/scss/view css/view.css
@@ -22,6 +22,11 @@ a {
   color: #fff;
 }
 
+@font-face {
+  font-family: "Druk Wide Web Super";
+  src: url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.eot"); /* IE9*/
+  src: url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.eot?#iefix") format("embedded-opentype"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.woff2") format("woff2"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.woff") format("woff"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.ttf") format("truetype"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.svg#Druk Wide Web Super") format("svg"); /* iOS 4.1- */
+}
 header {
   width: 100%;
   height: 20vh;
@@ -78,13 +83,17 @@ section article {
   flex-direction: column;
   justify-content: center;
 }
+section .figureSection {
+  color: transparent;
+  -webkit-text-stroke: 2px yellow;
+  font: normal 2rem/3rem "Druk Wide Web Super";
+}
 section figure {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   text-align: center;
-  font: normal 2rem/1 "Tourney";
 }
 section figure img {
   width: 100%;
@@ -118,6 +127,7 @@ section .slider .slider-content .insta {
   height: 80%;
   border-radius: 1rem;
   background-color: #fff;
+  border: 1px solid black;
   box-shadow: 0 5px 13px 0 #b5b5a6;
 }
 section .slider .slider-content .insta:hover {
@@ -279,69 +289,105 @@ section #slider2 {
   flex-direction: column;
   width: 100%;
   height: inherit;
-  background: linear-gradient(to left, #141e30, #243b55, transparent 90%);
+  background: radial-gradient(at 20% 125%, #feda78 20%, #e23467 60%, #ac2bb3 90%);
 }
 section #slider2 .correct {
   position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-left: 10rem;
   width: 100%;
   height: 50%;
-}
-section #slider2 .correct .correct-content {
-  perspective: 400px;
+  perspective: 500px;
   perspective-origin: right;
 }
-section #slider2 .correct .correct-content img {
-  width: 20%;
-  height: 100%;
-  opacity: 0.8;
-  margin: 1rem;
+section #slider2 .correct .correct-content {
+  opacity: 0.85;
+  width: 11vw;
+  height: 150%;
   border-radius: 15px;
-  border: 3px solid #0eff7a;
-  -o-object-fit: cover;
-     object-fit: cover;
-  box-shadow: 0 4px 5px 0 black;
-  transform: rotateY(12deg) translate(100px, 70px) rotatez(-3deg);
+  border: 2px solid #36255c;
+  box-shadow: 0 5px 10px 0 black;
+  background-color: white;
+  transform: rotateY(12deg) translate(100px, 80px) rotatez(-3deg);
+}
+section #slider2 .correct .correct-content .emoge2 {
+  font-size: 0.9rem;
+  letter-spacing: 5px;
+  color: black;
+  position: absolute;
+  bottom: 6rem;
+  left: -3rem;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+}
+section #slider2 .correct .correct-content img {
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+section #slider2 .correct .correct-content .homebtn {
+  position: absolute;
+  left: 43%;
+  top: 90%;
+  width: 1.5rem;
+  height: 2rem;
+  background-color: white;
+  box-shadow: inset 0 1px 2px 0 black;
+  border-radius: 50%;
 }
 section #slider2 .correct .descript {
+  font-family: "Druk Wide Web Super";
+  font-size: 10rem;
+  letter-spacing: 2rem;
+  color: transparent;
+  -webkit-text-stroke: 5px black;
   position: absolute;
+  top: 50%;
+  left: -1%;
   z-index: -1;
   height: 100%;
   width: 100%;
   text-align: center;
 }
+section #slider2 .correct .descript:hover {
+  color: yellow;
+  cursor: pointer;
+}
 section #slider2 .reverse {
   position: relative;
   width: 100%;
   height: 50%;
+  perspective: 500px;
 }
 section #slider2 .reverse .reverse-content {
-  position: relative;
+  position: absolute;
+  opacity: 0.9;
+  right: 0;
+  bottom: 5%;
+  height: 165%;
+  width: 26%;
+  border-radius: 15px;
+  border: 2px solid #fff93d;
+  background-color: white;
+  box-shadow: 0 4px 5px 0 black;
   display: flex;
-  flex-direction: row-reverse;
-  perspective: 500px;
+  align-items: flex-end;
+  transform: rotateY(-10deg) translate(-80px, -40px) rotatez(3deg);
   z-index: 1;
 }
-section #slider2 .reverse .reverse-content img {
-  width: 25%;
-  height: 100%;
-  opacity: 0.9;
-  margin: 1rem;
-  border-radius: 15px;
-  border: 3px solid #0eff7a;
-  -o-object-fit: cover;
-     object-fit: cover;
-  box-shadow: 0 4px 5px 0 black;
-  transform: rotateY(-12deg) translate(-80px, -40px) rotatez(3deg);
-}
-section #slider2 .reverse .arti {
+section #slider2 .reverse .reverse-content iframe {
   width: 100%;
   height: 100%;
-  bottom: 20%;
-  position: absolute;
-  z-index: -2;
+  opacity: 0.9;
+  border-radius: 15px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 section #slide3 {
   display: flex;
@@ -350,6 +396,26 @@ section #slide3 {
 section section.emptyground {
   width: 100%;
   height: 75vh;
+}
+
+#slider3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#slider3 .loader {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid rgba(255, 255, 255, 0.2);
+  border-top-color: transparent;
+  animation: rot1 1.2s linear infinite;
+}
+@keyframes rot1 {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 #commonUpButton {
