--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -7,6 +7,25 @@
 // font-family: 'Tilt Prism', cursive;
 // font-family: 'Tourney', cursive;
 
+@font-face {
+  font-family: "Druk Wide Web Super";
+  src: url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.eot"); /* IE9*/
+  src: url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */
+      url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.woff2")
+      format("woff2"),
+    /* chrome firefox */
+      url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.woff")
+      format("woff"),
+    /* chrome firefox */
+      url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.ttf")
+      format("truetype"),
+    /* chrome firefox opera Safari, Android, iOS 4.2+*/
+      url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.svg#Druk Wide Web Super")
+      format("svg"); /* iOS 4.1- */
+}
+
 //HEADER
 
 header {
@@ -67,6 +86,11 @@ section {
     flex-direction: column;
     justify-content: center;
   }
+  .figureSection {
+    color: transparent;
+    -webkit-text-stroke: 2px yellow;
+    font: normal 2rem/3rem "Druk Wide Web Super";
+  }
 
   figure {
     width: 100%;
@@ -74,7 +98,6 @@ section {
     display: flex;
     align-items: center;
     text-align: center;
-    font: normal 2rem/1 "Tourney";
     img {
       width: 100%;
       height: 45vh;
@@ -108,6 +131,7 @@ section {
         height: 80%;
         border-radius: 1rem;
         background-color: #fff;
+        border: 1px solid black;
         box-shadow: 0 5px 13px 0 #b5b5a6;
         &:hover {
           cursor: pointer;
@@ -243,7 +267,6 @@ section {
             width: max-content;
             height: fit-content;
             font-size: 13px;
-            // letter-spacing: 0.5px;
             text-align: left;
             left: 3rem;
             background-color: white;
@@ -257,7 +280,6 @@ section {
             padding: 0.5rem;
             height: 2rem;
             font-size: 13px;
-            // letter-spacing: 0.5px;
             text-align: center;
             background-color: #fef01b;
             border-radius: 10px;
@@ -281,35 +303,77 @@ section {
     flex-direction: column;
     width: 100%;
     height: inherit;
-    background: linear-gradient(to left, #141e30, #243b55, transparent 90%);
+    background: radial-gradient(
+      at 20% 125%,
+      #feda78 20%,
+      #e23467 60%,
+      #ac2bb3 90%
+    );
     .correct {
       position: relative;
       display: flex;
       flex-direction: row;
       align-items: center;
+      padding-left: 10rem;
       width: 100%;
       height: 50%;
+      perspective: 500px;
+      perspective-origin: right;
       .correct-content {
-        perspective: 400px;
-        perspective-origin: right;
+        opacity: 0.85;
+        width: 11vw;
+        height: 150%;
+        border-radius: 15px;
+        border: 2px solid #36255c;
+        box-shadow: 0 5px 10px 0 black;
+        background-color: white;
+        transform: rotateY(12deg) translate(100px, 80px) rotatez(-3deg);
+        .emoge2 {
+          font-size: 0.9rem;
+          letter-spacing: 5px;
+          color: black;
+          position: absolute;
+          bottom: 6rem;
+          left: -3rem;
+          width: 100%;
+          height: 3rem;
+          display: flex;
+          flex-direction: row;
+        }
         img {
-          width: 20%;
+          width: 100%;
           height: 100%;
-          opacity: 0.8;
-          margin: 1rem;
-          border-radius: 15px;
-          border: 3px solid #0eff7a;
-          object-fit: cover;
-          box-shadow: 0 4px 5px 0 black;
-          transform: rotateY(12deg) translate(100px, 70px) rotatez(-3deg);
+          opacity: 0.9;
+          object-fit: contain;
+        }
+        .homebtn {
+          position: absolute;
+          left: 43%;
+          top: 90%;
+          width: 1.5rem;
+          height: 2rem;
+          background-color: white;
+          box-shadow: inset 0 1px 2px 0 black;
+          border-radius: 50%;
         }
       }
       .descript {
+        font-family: "Druk Wide Web Super";
+        font-size: 10rem;
+        letter-spacing: 2rem;
+        color: transparent;
+        -webkit-text-stroke: 5px black;
         position: absolute;
+        top: 50%;
+        left: -1%;
         z-index: -1;
         height: 100%;
         width: 100%;
         text-align: center;
+        &:hover {
+          color: yellow;
+          cursor: pointer;
+        }
       }
     }
 
@@ -317,30 +381,29 @@ section {
       position: relative;
       width: 100%;
       height: 50%;
+      perspective: 500px;
       .reverse-content {
-        position: relative;
+        position: absolute;
+        opacity: 0.9;
+        right: 0;
+        bottom: 5%;
+        height: 165%;
+        width: 26%;
+        border-radius: 15px;
+        border: 2px solid #fff93d;
+        background-color: white;
+        box-shadow: 0 4px 5px 0 black;
         display: flex;
-        flex-direction: row-reverse;
-        perspective: 500px;
+        align-items: flex-end;
+        transform: rotateY(-10deg) translate(-80px, -40px) rotatez(3deg);
         z-index: 1;
-        img {
-          width: 25%;
+        iframe {
+          width: 100%;
           height: 100%;
           opacity: 0.9;
-          margin: 1rem;
           border-radius: 15px;
-          border: 3px solid #0eff7a;
-          object-fit: cover;
-          box-shadow: 0 4px 5px 0 black;
-          transform: rotateY(-12deg) translate(-80px, -40px) rotatez(3deg);
+          object-fit: contain;
         }
-      }
-      .arti {
-        width: 100%;
-        height: 100%;
-        bottom: 20%;
-        position: absolute;
-        z-index: -2;
       }
     }
   }
@@ -353,6 +416,27 @@ section {
   section.emptyground {
     width: 100%;
     height: 75vh;
+  }
+}
+
+#slider3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  .loader {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid rgb(255, 255, 255, 0.2);
+    border-top-color: transparent;
+    animation: rot1 1.2s linear infinite;
+  }
+
+  @keyframes rot1 {
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
 
