--- a/scss/drive css/drive.scss
+++ b/scss/drive css/drive.scss
@@ -3,9 +3,13 @@
 
 //FONT
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap%22");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
+// font-family: 'Bangers'
 // font-family: 'Gajraj One', cursive;
 // font-family: 'Tilt Prism', cursive; //Header
 // font-family: 'Tourney', cursive;
+// font-family: 'Noto Sans KR', sans-serif;
 
 // Font-face //
 @font-face {
@@ -65,7 +69,7 @@ header {
   z-index: 9999;
 
   h1 a {
-    font: bold 48px/50px "Tilt Prism";
+    font: bold 5.5rem/50px "Bangers";
     color: #fff;
   }
 
@@ -76,9 +80,11 @@ header {
       margin: 0 20px;
 
       a {
-        font: 24px "Tilt Prism";
         letter-spacing: 1px;
         color: white;
+        font: bold 2.5rem/1 "Bangers";
+        text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee,
+          0 -2px #400bee;
 
         &:hover {
           font-weight: bold;
@@ -176,13 +182,13 @@ figure {
         width: 280px;
         height: 50px;
         color: #fff;
-        font: bold 48px/50px "Cafe24Ssurround";
+        font: bold 48px/50px "Noto Sans KR", sans-serif;
         margin-bottom: 24px;
       }
       span {
         display: inline-block;
         width: 100%;
-        font: normal 24px "Cafe24Ssurround";
+        font: normal 24px "Noto Sans KR", sans-serif;
         margin-bottom: 24px;
       }
     }
@@ -220,6 +226,7 @@ figure {
         display: inline-block;
         color: #fff;
         font-size: 16px;
+        font-family: "Noto Sans KR", sans-serif;
         padding: 5px;
         margin-top: 5px;
       }
@@ -255,14 +262,12 @@ figure {
   position: absolute;
   top: 100%;
   width: 100%;
-  height: 2700px;
+  height: 1900px;
+  margin-top: 180px;
   background-color: #0c0b0d;
-  overflow: hidden;
 
   g {
     position: absolute;
-    width: 100%;
-    height: 100%;
     z-index: 99;
     stroke: #fbf13a;
   }
@@ -306,43 +311,44 @@ figure {
 // }
 .st0 {
   fill: none;
-  // stroke: #fbf13a;
-  // stroke-width: 1;
-  // stroke-linecap: round;
-  // stroke-linejoin: round;
-  // stroke-miterlimit: 10;
+  stroke: #fbf13a;
+  stroke-width: 3;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 10;
 }
 
 // Map //
 .seoul {
   position: relative;
   width: 100%;
-  height: 980px;
+  height: 780px;
   z-index: 9999;
   color: #fff;
 
   img {
     position: absolute;
-    width: 45vw;
+    width: 50vw;
     top: 5%;
     left: 50%;
     transform: translateX(-400px);
   }
 
-  // Container //
+  // 표시 //
   .container {
     position: absolute;
+    top: 50%;
+    left: 50%;
     border-radius: 50%;
     height: 36px;
     width: 36px;
-    animation: rotate_3922 1.2s linear infinite;
+    animation: rotate_3922 1s linear infinite;
     background-color: #9b59b6;
-    background: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+    background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
 
     &:hover {
-      width: 450px;
-      height: 450px;
-      animation-play-state: paused;
+      width: 500px;
+      height: 200px;
     }
   }
 
@@ -371,113 +377,64 @@ figure {
     filter: blur(50px);
   }
 
+  .container::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    background-color: #fff;
+    border: solid 5px #ffffff;
+    border-radius: 50%;
+  }
+
   @keyframes rotate_3922 {
     from {
-      transform: translate(-50%, -50%) rotate(0deg);
+      transform: rotate(0deg);
     }
 
     to {
-      transform: translate(-50%, -50%) rotate(360deg);
+      transform: rotate(360deg);
     }
   }
 
+  // 반포대교 //
   .container1 {
-    top: 5%;
-    left: 30%;
+    top: 65%;
+    left: 53%;
 
     &::after {
       content: "";
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      border: solid 5px #ffffff;
-      border-radius: 50%;
-      background-image: url(/video/map_01.png);
-    }
-  }
-  .container3 {
-    top: 15%;
-    left: 20%;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      background-image: url(/video/drive3.png);
-      border: solid 5px #ffffff;
-      border-radius: 50%;
+      background-image: url(/video/banpojpg.jpg);
     }
   }
 
-  .container5 {
-    top: 25%;
-    left: 30%;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      background-image: url(/video/drive3.png);
-      border: solid 5px #ffffff;
-      border-radius: 50%;
-    }
-  }
-
+  // 남산 //
   .container2 {
-    top: 5%;
-    left: 70%;
+    top: 37%;
+    left: 49%;
+  }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      background-image: url(/video/drive3.png);
-      border: solid 5px #ffffff;
-      border-radius: 50%;
-    }
+  // 북악 스퀘어 //
+  .container3 {
+    top: 53%;
+    left: 50%;
   }
 
   .container4 {
-    top: 15%;
-    left: 80%;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      background-image: url(/video/drive3.png);
-      border: solid 5px #ffffff;
-      border-radius: 50%;
-    }
+    top: 51%;
+    left: 54%;
   }
-  .container6 {
-    top: 25%;
-    left: 70%;
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      background-image: url(/video/drive3.png);
-      border: solid 5px #ffffff;
-      border-radius: 50%;
-    }
+  // 여의도 //
+  .container5 {
+    top: 56%;
+    left: 41%;
+  }
+  // 동호대교 //
+  .container6 {
+    top: 61%;
+    left: 58%;
   }
 }
